--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvd-88/modern-npm-package",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "A modern npm package",
   "exports": {
     ".": {
@@ -25,11 +25,18 @@
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davide-88/modern-npm-package.git"
+    "url": "https://github.com/davide-88/modern-npm-package.git"
+  },
+  "release": {
+    "branches": ["main"]
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +50,7 @@
     "@types/mocha": "^9.1.1",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
+    "semantic-release": "^19.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
